test/files/pos/t11787b.scala

class C {
  def f = (Array(1), Array("foo")).zipped
}
