test/files/neg/yimports-stable/C_2.scala

class C {
  val v: Numb = magic
  def greet() = println("hello, world!")
}
